export enum Animal {
  BEAR,
  FISH,
  FOX,
}
